// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Alert Default Alert 1`] = `
<div
  className="css-ni0ow3"
  style={
    Object {
      "display": "block",
    }
  }
>
  Test alert
</div>
`;

exports[`Alert Dismissible Alert 1`] = `
<div
  className="css-146lds2"
  style={
    Object {
      "display": "block",
    }
  }
>
  <div
    className="css-4344dp"
    onClick={[Function]}
  >
    +
  </div>
  Test alert
</div>
`;

exports[`Alert Outline Alert 1`] = `
<div
  className="css-16teh0p"
  style={
    Object {
      "display": "block",
    }
  }
>
  Test alert
</div>
`;
